@@ -36,176 +36,151 @@ import com.globalmentor.net.*;
 import io.confound.config.*;
 import io.guise.mummy.*;
 
-/**
- * Access to a Domain Name System (DNS).
- * @author Garret Wilson
- */
+/// Access to a Domain Name System (DNS).
+/// @author Garret Wilson
 public interface Dns extends DeployTarget {
 
-	/** The default TTL value if none is configured. */
+	/// The default TTL value if none is configured.
 	public static final long DEFAULT_TTL = TimeUnit.HOURS.toSeconds(1);
 
-	/**
-	 * The DNS zone section relative key for the origin, that is, base domain name. Must be a valid domain name in absolute (FQDN) form, ending with the
-	 * <code>.</code> domain delimiter. Defaults to the project domain {@value GuiseMummy#CONFIG_KEY_DOMAIN}, or if not present the common domain suffix of
-	 * {@value GuiseMummy#CONFIG_KEY_SITE_DOMAIN} and {@value GuiseMummy#CONFIG_KEY_SITE_ALT_DOMAINS}.
-	 */
+	/// The DNS zone section relative key for the origin, that is, base domain name. Must be a valid domain name in absolute (FQDN) form, ending with the
+	/// `.` domain delimiter. Defaults to the project domain [GuiseMummy#CONFIG_KEY_DOMAIN], or if not present the common domain suffix of
+	/// [GuiseMummy#CONFIG_KEY_SITE_DOMAIN] and [GuiseMummy#CONFIG_KEY_SITE_ALT_DOMAINS].
 	public static final String CONFIG_KEY_ORIGIN = "origin";
 
-	/** The DNS section relative key for the records list. */
+	/// The DNS section relative key for the records list.
 	public static final String CONFIG_KEY_RECORDS = "records";
 
-	/** The resource record section relative key for the record type. */
+	/// The resource record section relative key for the record type.
 	public static final String RECORD_CONFIG_KEY_TYPE = "type";
 
-	/** The resource record section relative key for the record name. */
+	/// The resource record section relative key for the record name.
 	public static final String RECORD_CONFIG_KEY_NAME = "name";
 
-	/** The resource record section relative key for the record value. */
+	/// The resource record section relative key for the record value.
 	public static final String RECORD_CONFIG_KEY_VALUE = "value";
 
-	/** The resource record section relative key for the record TTL. */
+	/// The resource record section relative key for the record TTL.
 	public static final String RECORD_CONFIG_KEY_TTL = "ttl";
 
-	/**
-	 * Returns the origin, or base domain name, for this DNS zone in absolute form.
-	 * @return The fully-qualified domain name serving as the base for this zone.
-	 */
+	/// Returns the origin, or base domain name, for this DNS zone in absolute form.
+	/// @return The fully-qualified domain name serving as the base for this zone.
 	public DomainName getOrigin();
 
-	/**
-	 * {@inheritDoc} This may include creating any accounts or record zones, for example.
-	 */
+	/// {@inheritDoc} This may include creating any accounts or record zones, for example.
 	@Override
 	public void prepare(MummyContext context) throws IOException;
 
-	/**
-	 * {@inheritDoc} This includes actually creating any defined resource records.
-	 * @see #CONFIG_KEY_RECORDS
-	 */
+	/// {@inheritDoc} This includes actually creating any defined resource records.
+	/// @see #CONFIG_KEY_RECORDS
 	@Override
 	public Optional<URI> deploy(MummyContext context, Artifact rootArtifact) throws IOException;
 
-	/**
-	 * Sets a resource record. If a resource record with the same type and name does not already exists, it will be added. If a resource record already exists
-	 * with the same type and name, it will be replaced. (This is commonly referred to as <dfn>upsert</dfn>.)
-	 * @implSpec The default implementation delegates to {@link #setResourceRecords(ResourceRecord.Type, DomainName, Stream, long)}.
-	 * @implNote Implementations should normally only override {@link #setResourceRecords(String, DomainName, Stream, long)}.
-	 * @param type The type of resource record to set.
-	 * @param name The fully-qualified domain name of the resource record.
-	 * @param value The value to store in the resource record.
-	 * @param ttl The resource record cache time to live, in seconds.
-	 * @throws IllegalArgumentException if the given name is not absolute.
-	 * @throws IllegalArgumentException if the given TTL is negative.
-	 * @throws IOException If there was an error setting the resource record.
-	 */
+	/// Sets a resource record. If a resource record with the same type and name does not already exists, it will be added. If a resource record already exists
+	/// with the same type and name, it will be replaced. (This is commonly referred to as _upsert_.)
+	/// @implSpec The default implementation delegates to [#setResourceRecords(ResourceRecord.Type, DomainName, Stream, long)].
+	/// @implNote Implementations should normally only override [#setResourceRecords(String, DomainName, Stream, long)].
+	/// @param type The type of resource record to set.
+	/// @param name The fully-qualified domain name of the resource record.
+	/// @param value The value to store in the resource record.
+	/// @param ttl The resource record cache time to live, in seconds.
+	/// @throws IllegalArgumentException if the given name is not absolute.
+	/// @throws IllegalArgumentException if the given TTL is negative.
+	/// @throws IOException If there was an error setting the resource record.
 	public default void setResourceRecord(final ResourceRecord.Type type, @NonNull final DomainName name, @NonNull final String value,
 			final long ttl) throws IOException {
 		setResourceRecords(type, name, Stream.of(value), ttl);
 	}
 
-	/**
-	 * Sets a resource record. If a resource record with the same type and name does not already exists, it will be added. If a resource record already exists
-	 * with the same type and name, it will be replaced. (This is commonly referred to as <dfn>upsert</dfn>.)
-	 * @apiNote Use {@link #setResourceRecord(ResourceRecord.Type, DomainName, String, long)} for known resource record types is preferred for type and value
-	 *          safety.
-	 * @implSpec The default implementation delegates to {@link #setResourceRecords(String, DomainName, Stream, long)}.
-	 * @implNote Implementations should normally only override {@link #setResourceRecords(String, DomainName, Stream, long)}.
-	 * @param type The type of resource record to set.
-	 * @param name The fully-qualified domain name of the resource record.
-	 * @param value The value to store in the resource record.
-	 * @param ttl The resource record cache time to live, in seconds.
-	 * @throws IllegalArgumentException if the given name is not absolute.
-	 * @throws IllegalArgumentException if the given TTL is negative.
-	 * @throws IOException If there was an error setting the resource record.
-	 */
+	/// Sets a resource record. If a resource record with the same type and name does not already exists, it will be added. If a resource record already exists
+	/// with the same type and name, it will be replaced. (This is commonly referred to as _upsert_.)
+	/// @apiNote Use [#setResourceRecord(ResourceRecord.Type, DomainName, String, long)] for known resource record types is preferred for type and value
+	///          safety.
+	/// @implSpec The default implementation delegates to [#setResourceRecords(String, DomainName, Stream, long)].
+	/// @implNote Implementations should normally only override [#setResourceRecords(String, DomainName, Stream, long)].
+	/// @param type The type of resource record to set.
+	/// @param name The fully-qualified domain name of the resource record.
+	/// @param value The value to store in the resource record.
+	/// @param ttl The resource record cache time to live, in seconds.
+	/// @throws IllegalArgumentException if the given name is not absolute.
+	/// @throws IllegalArgumentException if the given TTL is negative.
+	/// @throws IOException If there was an error setting the resource record.
 	public default void setResourceRecord(@NonNull final String type, @NonNull final DomainName name, @NonNull final String value, final long ttl)
 			throws IOException {
 		setResourceRecords(type, name, Stream.of(value), ttl);
 	}
 
-	/**
-	 * Sets potentially several resource records with the given type and name, removing all other resource records with the same type and name.
-	 * @implSpec The default implementation delegates to {@link #setResourceRecords(ResourceRecord.Type, DomainName, Stream, long)}.
-	 * @implNote Implementations should normally only override {@link #setResourceRecords(String, DomainName, Stream, long)}.
-	 * @param type The type of resource record to set.
-	 * @param name The fully-qualified domain name of the resource record.
-	 * @param values The values to store in the resource records; there must be at least one value.
-	 * @param ttl The resource record cache time to live, in seconds.
-	 * @throws IllegalArgumentException if the given name is not absolute.
-	 * @throws IllegalArgumentException if no values are given.
-	 * @throws IllegalArgumentException if the given TTL is negative.
-	 * @throws IOException If there was an error setting the resource record values.
-	 */
+	/// Sets potentially several resource records with the given type and name, removing all other resource records with the same type and name.
+	/// @implSpec The default implementation delegates to [#setResourceRecords(ResourceRecord.Type, DomainName, Stream, long)].
+	/// @implNote Implementations should normally only override [#setResourceRecords(String, DomainName, Stream, long)].
+	/// @param type The type of resource record to set.
+	/// @param name The fully-qualified domain name of the resource record.
+	/// @param values The values to store in the resource records; there must be at least one value.
+	/// @param ttl The resource record cache time to live, in seconds.
+	/// @throws IllegalArgumentException if the given name is not absolute.
+	/// @throws IllegalArgumentException if no values are given.
+	/// @throws IllegalArgumentException if the given TTL is negative.
+	/// @throws IOException If there was an error setting the resource record values.
 	public default void setResourceRecords(final ResourceRecord.Type type, @NonNull final DomainName name, @NonNull final Collection<String> values,
 			final long ttl) throws IOException {
 		setResourceRecords(type, name, values.stream(), ttl);
 	}
 
-	/**
-	 * Sets potentially several resource records with the given type and name, removing all other resource records with the same type and name.
-	 * @implSpec The default implementation delegates to {@link #setResourceRecords(String, DomainName, Stream, long)}.
-	 * @implNote Implementations should normally only override {@link #setResourceRecords(String, DomainName, Stream, long)}.
-	 * @param type The type of resource record to set.
-	 * @param name The fully-qualified domain name of the resource record.
-	 * @param values The values to store in the resource records; there must be at least one value.
-	 * @param ttl The resource record cache time to live, in seconds.
-	 * @throws IllegalArgumentException if the given name is not absolute.
-	 * @throws IllegalArgumentException if no values are given.
-	 * @throws IllegalArgumentException if the given TTL is negative.
-	 * @throws IOException If there was an error setting the resource record values.
-	 */
+	/// Sets potentially several resource records with the given type and name, removing all other resource records with the same type and name.
+	/// @implSpec The default implementation delegates to [#setResourceRecords(String, DomainName, Stream, long)].
+	/// @implNote Implementations should normally only override [#setResourceRecords(String, DomainName, Stream, long)].
+	/// @param type The type of resource record to set.
+	/// @param name The fully-qualified domain name of the resource record.
+	/// @param values The values to store in the resource records; there must be at least one value.
+	/// @param ttl The resource record cache time to live, in seconds.
+	/// @throws IllegalArgumentException if the given name is not absolute.
+	/// @throws IllegalArgumentException if no values are given.
+	/// @throws IllegalArgumentException if the given TTL is negative.
+	/// @throws IOException If there was an error setting the resource record values.
 	public default void setResourceRecords(final ResourceRecord.Type type, @NonNull final DomainName name, @NonNull final Stream<String> values,
 			final long ttl) throws IOException {
 		setResourceRecords(type.name(), name, values, ttl);
 	}
 
-	/**
-	 * Sets potentially several resource records with the given type and name, removing all other resource records with the same type and name.
-	 * @implSpec The default implementation delegates to {@link #setResourceRecords(String, DomainName, Stream, long)}.
-	 * @implNote Implementations should normally only override {@link #setResourceRecords(String, DomainName, Stream, long)}.
-	 * @param type The type of resource record to set.
-	 * @param name The fully-qualified domain name of the resource record.
-	 * @param values The values to store in the resource records; there must be at least one value.
-	 * @param ttl The resource record cache time to live, in seconds.
-	 * @throws IllegalArgumentException if the given name is not absolute.
-	 * @throws IllegalArgumentException if no values are given.
-	 * @throws IllegalArgumentException if the given TTL is negative.
-	 * @throws IOException If there was an error setting the resource record values.
-	 */
+	/// Sets potentially several resource records with the given type and name, removing all other resource records with the same type and name.
+	/// @implSpec The default implementation delegates to [#setResourceRecords(String, DomainName, Stream, long)].
+	/// @implNote Implementations should normally only override [#setResourceRecords(String, DomainName, Stream, long)].
+	/// @param type The type of resource record to set.
+	/// @param name The fully-qualified domain name of the resource record.
+	/// @param values The values to store in the resource records; there must be at least one value.
+	/// @param ttl The resource record cache time to live, in seconds.
+	/// @throws IllegalArgumentException if the given name is not absolute.
+	/// @throws IllegalArgumentException if no values are given.
+	/// @throws IllegalArgumentException if the given TTL is negative.
+	/// @throws IOException If there was an error setting the resource record values.
 	public default void setResourceRecords(@NonNull final String type, @NonNull final DomainName name, @NonNull final Collection<String> values,
 			final long ttl) throws IOException {
 		setResourceRecords(type, name, values.stream(), ttl);
 	}
 
-	/**
-	 * Sets potentially several resource records with the given type and name, removing all other resource records with the same type and name.
-	 * @apiNote Use {@link #setResourceRecords(ResourceRecord.Type, DomainName, Stream, long)} for known resource record types is preferred for type and value
-	 *          safety.
-	 * @param type The type of resource record to set.
-	 * @param name The fully-qualified domain name of the resource record.
-	 * @param values The values to store in the resource records; there must be at least one value.
-	 * @param ttl The resource record cache time to live, in seconds.
-	 * @throws IllegalArgumentException if the given name is not absolute.
-	 * @throws IllegalArgumentException if no values are given.
-	 * @throws IllegalArgumentException if the given TTL is negative.
-	 * @throws IOException If there was an error setting the resource record values.
-	 */
+	/// Sets potentially several resource records with the given type and name, removing all other resource records with the same type and name.
+	/// @apiNote Use [#setResourceRecords(ResourceRecord.Type, DomainName, Stream, long)] for known resource record types is preferred for type and value
+	///          safety.
+	/// @param type The type of resource record to set.
+	/// @param name The fully-qualified domain name of the resource record.
+	/// @param values The values to store in the resource records; there must be at least one value.
+	/// @param ttl The resource record cache time to live, in seconds.
+	/// @throws IllegalArgumentException if the given name is not absolute.
+	/// @throws IllegalArgumentException if no values are given.
+	/// @throws IllegalArgumentException if the given TTL is negative.
+	/// @throws IOException If there was an error setting the resource record values.
 	public void setResourceRecords(@NonNull final String type, @NonNull final DomainName name, @NonNull final Stream<String> values, final long ttl)
 			throws IOException;
 
-	/**
-	 * Sets a resource record. If a resource record with the same type and name does not already exists, it will be added. If a resource record already exists
-	 * with the same type and name, it will be replaced. (This is commonly referred to as <dfn>upsert</dfn>.)
-	 * <p>
-	 * Resource record names will be resolved against the origin domain name, if any. {@link #DEFAULT_TTL} will be used if no TTL is indicated.
-	 * </p>
-	 * @implSpec The default implementation delegates to {@link #setResourceRecord(String, DomainName, String, long)}.
-	 * @param resourceRecord The resource record to set.
-	 * @throws IOException If there was an error setting the resource record.
-	 * @see #getOrigin()
-	 * @see #DEFAULT_TTL
-	 */
+	/// Sets a resource record. If a resource record with the same type and name does not already exists, it will be added. If a resource record already exists
+	/// with the same type and name, it will be replaced. (This is commonly referred to as _upsert_.)
+	///
+	/// Resource record names will be resolved against the origin domain name, if any. [#DEFAULT_TTL] will be used if no TTL is indicated.
+	/// @implSpec The default implementation delegates to [#setResourceRecord(String, DomainName, String, long)].
+	/// @param resourceRecord The resource record to set.
+	/// @throws IOException If there was an error setting the resource record.
+	/// @see #getOrigin()
+	/// @see #DEFAULT_TTL
 	public default void setResourceRecord(@NonNull final ResourceRecord resourceRecord) throws IOException {
 		final DomainName origin = getOrigin();
 		final DomainName name = origin.resolve(resourceRecord.getName().orElse(DomainName.EMPTY));
@@ -213,39 +188,33 @@ public interface Dns extends DeployTarget {
 		setResourceRecord(resourceRecord.getType(), name, resourceRecord.getValue(), ttl);
 	}
 
-	/**
-	 * Sets the given resource records in this DNS zone. For each unit type and name in the given group of resource records, all other values not given will be
-	 * removed.
-	 * <p>
-	 * Resource record names will be resolved against the origin domain name, if any. {@link #DEFAULT_TTL} will be used if no TTL is indicated. If a set of
-	 * records have different TTL values, it is undefined which TTL value will be used, although if one of the combined records has a TTL value is guaranteed that
-	 * the combined record will have a TTL value.
-	 * </p>
-	 * @implSpec The default implementation delegates to {@link #setResourceRecords(Stream)}.
-	 * @param resourceRecords The resource records to set.
-	 * @throws IOException If there was an error setting a resource record.
-	 * @see #getOrigin()
-	 * @see #DEFAULT_TTL
-	 */
+	/// Sets the given resource records in this DNS zone. For each unit type and name in the given group of resource records, all other values not given will be
+	/// removed.
+	///
+	/// Resource record names will be resolved against the origin domain name, if any. [#DEFAULT_TTL] will be used if no TTL is indicated. If a set of
+	/// records have different TTL values, it is undefined which TTL value will be used, although if one of the combined records has a TTL value is guaranteed that
+	/// the combined record will have a TTL value.
+	/// @implSpec The default implementation delegates to [#setResourceRecords(Stream)].
+	/// @param resourceRecords The resource records to set.
+	/// @throws IOException If there was an error setting a resource record.
+	/// @see #getOrigin()
+	/// @see #DEFAULT_TTL
 	public default void setResourceRecords(@NonNull final Collection<ResourceRecord> resourceRecords) throws IOException {
 		setResourceRecords(resourceRecords.stream());
 	}
 
-	/**
-	 * Sets the given resource records in this DNS zone. For each unit type and name in the given group of resource records, all other values not given will be
-	 * removed.
-	 * <p>
-	 * Resource record names will be resolved against the origin domain name, if any. {@link #DEFAULT_TTL} will be used if no TTL is indicated. If a set of
-	 * records have different TTL values, it is undefined which TTL value will be used, although if one of the combined records has a TTL value is guaranteed that
-	 * the combined record will have a TTL value.
-	 * </p>
-	 * @param resourceRecords The resource records to set.
-	 * @implSpec The default implementation groups together the values of records with the same type and resolved name and delegates to
-	 *           {@link #setResourceRecords(String, DomainName, Stream, long)}.
-	 * @throws IOException If there was an error setting a resource record.
-	 * @see #getOrigin()
-	 * @see #DEFAULT_TTL
-	 */
+	/// Sets the given resource records in this DNS zone. For each unit type and name in the given group of resource records, all other values not given will be
+	/// removed.
+	///
+	/// Resource record names will be resolved against the origin domain name, if any. [#DEFAULT_TTL] will be used if no TTL is indicated. If a set of
+	/// records have different TTL values, it is undefined which TTL value will be used, although if one of the combined records has a TTL value is guaranteed that
+	/// the combined record will have a TTL value.
+	/// @param resourceRecords The resource records to set.
+	/// @implSpec The default implementation groups together the values of records with the same type and resolved name and delegates to
+	///           [#setResourceRecords(String, DomainName, Stream, long)].
+	/// @throws IOException If there was an error setting a resource record.
+	/// @see #getOrigin()
+	/// @see #DEFAULT_TTL
 	public default void setResourceRecords(@NonNull final Stream<ResourceRecord> resourceRecords) throws IOException {
 		final DomainName origin = getOrigin();
 		resourceRecords //group by type+name
@@ -259,32 +228,28 @@ public interface Dns extends DeployTarget {
 				}));
 	}
 
-	/**
-	 * Determines the domain name to use as the base for the hosted zone. This method determines the domain in the following order:
-	 * <ol>
-	 * <li>The key {@value #CONFIG_KEY_ORIGIN} relative to the DNS local configuration.</li>
-	 * <li>The key {@value GuiseMummy#CONFIG_KEY_DOMAIN} retrieved from the global configuration.</li>
-	 * <li>The site base domain determined by the longest common domain segment suffix from the site domain {@value GuiseMummy#CONFIG_KEY_SITE_DOMAIN} and
-	 * alternative domains {@value GuiseMummy#CONFIG_KEY_SITE_ALT_DOMAINS}, retrieved from the global configuration.</li>
-	 * </ol>
-	 * @implSpec This method calls {@link GuiseMummy#findConfiguredDomain(Configuration)}, {@link GuiseMummy#findConfiguredSiteDomain(Configuration)}, and
-	 *           {@link GuiseMummy#findConfiguredSiteAltDomains(Configuration)}.
-	 * @param globalConfiguration The configuration containing all the configuration values.
-	 * @param localConfiguration The local configuration for the Route 53 DNS, which may be a section of the project configuration.
-	 * @return The base domain to be managed by the hosted zone.
-	 * @throws ConfigurationException if no origin is configured, or the configured origin is not a full-qualified domain name.
-	 * @see #CONFIG_KEY_ORIGIN
-	 * @see GuiseMummy#CONFIG_KEY_DOMAIN
-	 * @see GuiseMummy#CONFIG_KEY_SITE_DOMAIN
-	 * @see GuiseMummy#CONFIG_KEY_SITE_ALT_DOMAINS
-	 */
+	/// Determines the domain name to use as the base for the hosted zone. This method determines the domain in the following order:
+	/// 1. The key [#CONFIG_KEY_ORIGIN] relative to the DNS local configuration.
+	/// 2. The key [GuiseMummy#CONFIG_KEY_DOMAIN] retrieved from the global configuration.
+	/// 3. The site base domain determined by the longest common domain segment suffix from the site domain [GuiseMummy#CONFIG_KEY_SITE_DOMAIN] and
+	///    alternative domains [GuiseMummy#CONFIG_KEY_SITE_ALT_DOMAINS], retrieved from the global configuration.
+	/// @implSpec This method calls [GuiseMummy#findConfiguredDomain(Configuration)], [GuiseMummy#findConfiguredSiteDomain(Configuration)], and
+	///           [GuiseMummy#findConfiguredSiteAltDomains(Configuration)].
+	/// @param globalConfiguration The configuration containing all the configuration values.
+	/// @param localConfiguration The local configuration for the Route 53 DNS, which may be a section of the project configuration.
+	/// @return The base domain to be managed by the hosted zone.
+	/// @throws ConfigurationException if no origin is configured, or the configured origin is not a full-qualified domain name.
+	/// @see #CONFIG_KEY_ORIGIN
+	/// @see GuiseMummy#CONFIG_KEY_DOMAIN
+	/// @see GuiseMummy#CONFIG_KEY_SITE_DOMAIN
+	/// @see GuiseMummy#CONFIG_KEY_SITE_ALT_DOMAINS
 	static DomainName getConfiguredOrigin(@NonNull final Configuration globalConfiguration, @NonNull final Configuration localConfiguration)
 			throws ConfigurationException {
 		//local hosted zone designation
 		return localConfiguration.findString(CONFIG_KEY_ORIGIN).map(DomainName::of).map(hostedZoneName -> {
 			if(!hostedZoneName.isAbsolute() || hostedZoneName.isRoot()) {
 				throw new ConfigurationException(
-						String.format("The DNS zone `%s` configuration `%s` must be a fully-qualified, non-root domain name (FQDN), ending in a dot `%s` character.",
+						"The DNS zone `%s` configuration `%s` must be a fully-qualified, non-root domain name (FQDN), ending in a dot `%s` character.".formatted(
 								CONFIG_KEY_ORIGIN, hostedZoneName, DomainName.DELIMITER)); //TODO i18n
 			}
 			return hostedZoneName;
@@ -295,24 +260,22 @@ public interface Dns extends DeployTarget {
 				.or(() -> {
 					final List<DomainName> domains = Stream
 							.concat(findConfiguredSiteDomain(globalConfiguration).stream(), findConfiguredSiteAltDomains(globalConfiguration).orElse(emptyList()).stream())
-							.collect(toList());
+						.toList();
 					return DomainName.findGreatestCommonBase(domains);
 				}).orElseThrow(() -> new ConfigurationException("No origin domain could be determined for DNS zone."));
 	}
 
-	/**
-	 * Determines the resource records that have been configured use for the zone section, usually the DNS section itself, of the configuration.
-	 * @implNote This implementation attempts to normalize values to their encoded form for some recognized resource record types such as
-	 *           {@link ResourceRecord.Type#TXT} in case the producer has provided an encoded value, e.g. by copying from configuration documentation.
-	 * @param zone The configuration section defining the zone.
-	 * @return The configured resource records.
-	 * @throws ConfigurationException if a resource record has invalid in incomplete information, such as a missing type or a negative TTL.
-	 * @see Dns#CONFIG_KEY_RECORDS
-	 * @see Dns#RECORD_CONFIG_KEY_TYPE
-	 * @see Dns#RECORD_CONFIG_KEY_NAME
-	 * @see Dns#RECORD_CONFIG_KEY_VALUE
-	 * @see Dns#RECORD_CONFIG_KEY_TTL
-	 */
+	/// Determines the resource records that have been configured use for the zone section, usually the DNS section itself, of the configuration.
+	/// @implNote This implementation attempts to normalize values to their encoded form for some recognized resource record types such as
+	///           [ResourceRecord.Type#TXT] in case the producer has provided an encoded value, e.g. by copying from configuration documentation.
+	/// @param zone The configuration section defining the zone.
+	/// @return The configured resource records.
+	/// @throws ConfigurationException if a resource record has invalid in incomplete information, such as a missing type or a negative TTL.
+	/// @see Dns#CONFIG_KEY_RECORDS
+	/// @see Dns#RECORD_CONFIG_KEY_TYPE
+	/// @see Dns#RECORD_CONFIG_KEY_NAME
+	/// @see Dns#RECORD_CONFIG_KEY_VALUE
+	/// @see Dns#RECORD_CONFIG_KEY_TTL
 	static Collection<ResourceRecord> getConfiguredResourceRecords(@NonNull final Configuration zone) throws ConfigurationException {
 		return zone.findCollection(CONFIG_KEY_RECORDS, Section.class).map(records -> {
 			return records.stream().map(record -> {
@@ -322,12 +285,10 @@ public interface Dns extends DeployTarget {
 					final String value = ResourceRecord.decodeCharactString(record.getString(RECORD_CONFIG_KEY_VALUE));
 					//normalize the configured value if possible for recognized resource record types
 					final String normalizedValue = Enums.asEnum(ResourceRecord.Type.class, type).map(resourceRecordType -> {
-						switch(resourceRecordType) {
-							case TXT:
-								return ResourceRecord.normalizeCharacterString(value);
-							default:
-								return value;
-						}
+						return switch(resourceRecordType) {
+							case TXT -> ResourceRecord.normalizeCharacterString(value);
+							default -> value;
+						};
 					}).orElse(value);
 					final OptionalLong configuredTtl = record.findLong(RECORD_CONFIG_KEY_TTL);
 					configuredTtl.ifPresent(Conditions::checkArgumentNotNegative);
@@ -336,7 +297,7 @@ public interface Dns extends DeployTarget {
 				} catch(final IllegalArgumentException illegalArgumentException) {
 					throw new ConfigurationException("Invalid DNS resource record; " + illegalArgumentException.getMessage(), illegalArgumentException);
 				}
-			}).collect(toList());
+			}).toList();
 		}).orElse(emptyList());
 	}
 
