@@ -22,7 +22,6 @@ import static com.globalmentor.io.Readers.*;
 import static com.globalmentor.java.Conditions.*;
 import static java.nio.charset.StandardCharsets.*;
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.*;
 
 import java.io.*;
 import java.net.URI;
@@ -52,30 +51,22 @@ import com.vladsch.flexmark.util.data.MutableDataSet;
 
 import io.guise.mummy.MummyContext;
 
-/**
- * Mummifier for Markdown documents.
- * @implSpec This implementation defaults to UTF-8, producing an error if the encoding isn't valid. Other encodings are supported with the appropriate BOM.
- * @author Garret Wilson
- */
+/// Mummifier for Markdown documents.
+/// @implSpec This implementation defaults to UTF-8, producing an error if the encoding isn't valid. Other encodings are supported with the appropriate BOM.
+/// @author Garret Wilson
 public class MarkdownPageMummifier extends AbstractPageMummifier {
 
-	/** Pattern for a Markdown document with YAML front matter. */
+	/// Pattern for a Markdown document with YAML front matter.
 	static final Pattern MARKDOWN_WITH_YAML_PATTERN = Pattern.compile("(?:---[\\r\\n]+(.*)---(?:[\\r\\n]+|$))?(.*)", Pattern.DOTALL);
-	/** The matching group for YAML content in a Markdown document with YAML. The value of the group will be <code>null</code> if no YAML is present. */
+	/// The matching group for YAML content in a Markdown document with YAML. The value of the group will be `null` if no YAML is present.
 	static final int MARKDOWN_WITH_YAML_PATTERN_YAML_GROUP = 1;
-	/**
-	 * The matching group for Markdown content in a Markdown document with YAML. The value of the group may be the empty string but will never be
-	 * <code>null</code>.
-	 */
+	/// The matching group for Markdown content in a Markdown document with YAML. The value of the group may be the empty string but will never be
+	/// `null`.
 	static final int MARKDOWN_WITH_YAML_PATTERN_MARKDOWN_GROUP = 2;
 
-	/**
-	 * The template for wrapping an XHTML document around the generated HTML. It has the following parameters:
-	 * <ol>
-	 * <li>Page {@code <title>} content.</li>
-	 * <li>Page {@code <body>} content.</li>
-	 * </ol>
-	 */
+	/// The template for wrapping an XHTML document around the generated HTML. It has the following parameters:
+	/// 1. Page `<title>` content.
+	/// 2. Page `<body>` content.
 	private static final StringTemplate XHTML_TEMPLATE = StringTemplate
 			.builder() //@formatter:off
 					.text("<?xml version=\"1.0\" encoding=\"UTF-8\"?>").newline()
@@ -89,11 +80,9 @@ public class MarkdownPageMummifier extends AbstractPageMummifier {
 					.text("</body>")
 					.text("</html>").newline().build();	//@formatter:on
 
-	/**
-	 * {@inheritDoc}
-	 * @implNote The supported extensions follow the two given in <a href="https://tools.ietf.org/html/rfc7763">RFC 7763</a> so as to promote consistency, namely
-	 *           <code>md</code> and <code>markdown</code>, even though there are <a href="https://superuser.com/a/285878/954883">many variations</a> in the wild.
-	 */
+	/// {@inheritDoc}
+	/// @implNote The supported extensions follow the two given in [RFC 7763](https://tools.ietf.org/html/rfc7763) so as to promote consistency, namely
+	///           `md` and `markdown`, even though there are [many variations](https://superuser.com/a/285878/954883) in the wild.
 	@Override
 	public Set<String> getSupportedFilenameExtensions() {
 		return Set.of("md", "markdown");
@@ -101,23 +90,22 @@ public class MarkdownPageMummifier extends AbstractPageMummifier {
 
 	private final Parser parser;
 
-	/**
-	 * Returns the parser for parsing Markdown.
-	 * @apiNote The Flexmark parser API indicates it can be used by multiple threads.
-	 * @return The parser for parsing Markdown.
-	 */
+	/// Returns the parser for parsing Markdown.
+	/// @apiNote The Flexmark parser API indicates it can be used by multiple threads.
+	/// @return The parser for parsing Markdown.
 	protected Parser getParser() {
 		return parser;
 	}
 
 	private final HtmlRenderer htmlRenderer;
 
-	/** @return The formatter that serializes a Markdown tree as HTML body content. */
+	/// Returns the formatter that serializes a Markdown tree as HTML body content.
+	/// @return The formatter that serializes a Markdown tree as HTML body content.
 	protected HtmlRenderer getHtmlRenderer() {
 		return htmlRenderer;
 	}
 
-	/** Constructor. */
+	/// Constructor.
 	public MarkdownPageMummifier() {
 		final MutableDataHolder parserOptions = new MutableDataSet()
 				//emoji; see https://www.webfx.com/tools/emoji-cheat-sheet/
@@ -132,17 +120,15 @@ public class MarkdownPageMummifier extends AbstractPageMummifier {
 		htmlRenderer = HtmlRenderer.builder().build();
 	}
 
-	/**
-	 * {@inheritDoc}
-	 * @implSpec This version loads a document in Markdown format.
-	 * @implSpec This version uses the filename as a title. It will be replaced later by any title indicated in the metadata during mummification.
-	 */
+	/// {@inheritDoc}
+	/// @implSpec This version loads a document in Markdown format.
+	/// @implSpec This version uses the filename as a title. It will be replaced later by any title indicated in the metadata during mummification.
 	@Override
 	public Document loadSourceDocument(final MummyContext context, final InputStream inputStream, final String name) throws IOException, DOMException {
 		final String content = readString(new BOMInputStreamReader(toMarkSupportedInputStream(inputStream))); //detect the BOM and to throw errors if the encoding is invalid
 		final Matcher matcher = MARKDOWN_WITH_YAML_PATTERN.matcher(content);
 		if(!matcher.matches()) {
-			throw new IOException(String.format("Invalid markdown in `%s`.", name));
+			throw new IOException("Invalid markdown in `%s`.".formatted(name));
 		}
 
 		//parse Markdown
@@ -157,37 +143,34 @@ public class MarkdownPageMummifier extends AbstractPageMummifier {
 		try {
 			document = documentBuilder.parse(new ByteArrayInputStream(xhtmlDocumentString.getBytes(UTF_8)));
 		} catch(final SAXException saxException) { //we don't expect this error, so checking for the locations using SAXParseException isn't that useful
-			throw new IOException(String.format("Error parsing generated XHTML for `%s`: %s.", name, saxException.getLocalizedMessage()), saxException); //TODO i18n
+			throw new IOException("Error parsing generated XHTML for `%s`: %s.".formatted(name, saxException.getLocalizedMessage()), saxException); //TODO i18n
 		}
 
 		return document;
 	}
 
-	/**
-	 * {@inheritDoc}
-	 * @implSpec This implementation reads the entire document and then parses any YAML front matter using SnakeYAML Engine.
-	 * @implSpec Only YAML mappings (name-value pairs) are supported. Names should be in <code>camelCase</code>. Namespace prefixes of predefined vocabularies in
-	 *           {@link AbstractPageMummifier#PREDEFINED_VOCABULARIES} are supported for names in the form <code>eg:name</code>.
-	 * @implSpec If the value is a string, this implementation delegates to {@link #parseMetadataPropertyValue(URI, CharSequence)} to determine the final value,
-	 *           inferring the property type based upon the property tag if possible.
-	 * @see AbstractPageMummifier#PREDEFINED_VOCABULARIES
-	 */
+	/// {@inheritDoc}
+	/// @implSpec This implementation reads the entire document and then parses any YAML front matter using SnakeYAML Engine.
+	/// @implSpec Only YAML mappings (name-value pairs) are supported. Names should be in `camelCase`. Namespace prefixes of predefined vocabularies in
+	///           [AbstractPageMummifier#PREDEFINED_VOCABULARIES] are supported for names in the form `eg:name`.
+	/// @implSpec If the value is a string, this implementation delegates to [#parseMetadataPropertyValue(URI, CharSequence)] to determine the final value,
+	///           inferring the property type based upon the property tag if possible.
+	/// @see AbstractPageMummifier#PREDEFINED_VOCABULARIES
 	@Override
 	protected List<Map.Entry<URI, Object>> loadSourceMetadata(final MummyContext context, final InputStream inputStream, final String name) throws IOException {
 		final String content = readString(new BOMInputStreamReader(toMarkSupportedInputStream(inputStream))); //detect the BOM and to throw errors if the encoding is invalid
 		final Matcher matcher = MARKDOWN_WITH_YAML_PATTERN.matcher(content);
 		if(!matcher.matches()) {
-			throw new IOException(String.format("Invalid markdown in `%s`.", name));
+			throw new IOException("Invalid markdown in `%s`.".formatted(name));
 		}
 		final String yaml = matcher.group(MARKDOWN_WITH_YAML_PATTERN_YAML_GROUP);
 		if(yaml == null) { //no YAML front matter present
 			return emptyList();
 		}
 		final Object object = new Load(LoadSettings.builder().build()).loadFromString(yaml);
-		if(!(object instanceof Map)) {
+		if(!(object instanceof Map<?, ?> yamlMap)) {
 			return emptyList();
 		}
-		final Map<?, ?> yamlMap = (Map<?, ?>)object;
 		try {
 			return yamlMap.entrySet().stream().map(mapping -> {
 				final Object yamlKey = mapping.getKey();
@@ -196,13 +179,13 @@ public class MarkdownPageMummifier extends AbstractPageMummifier {
 				checkArgument(yamlKey != null, "YAML key `%s` cannot be mapped to `null`.", yamlKey);
 				final Curie curie = Curie.parse((CharSequence)mapping.getKey(), false);
 				final URI tag = PREDEFINED_VOCABULARIES.findVocabularyTerm(curie).map(VocabularyTerm::toURI)
-						.orElseThrow(() -> new IllegalArgumentException(String.format("YAML key `%s` uses unrecognized namespace prefix.", yamlKey)));
+						.orElseThrow(() -> new IllegalArgumentException("YAML key `%s` uses unrecognized namespace prefix.".formatted(yamlKey)));
 				//if the YAML value is a string, perform further processing to infer type as appropriate
 				final Object value = yamlValue instanceof String ? parseMetadataPropertyValue(tag, (String)yamlValue) : yamlValue;
 				return Map.entry(tag, value);
-			}).collect(toList());
+			}).toList();
 		} catch(final IllegalArgumentException illegalArgumentException) {
-			throw new IOException(String.format("Invalid YAML in `%s`: %s", name, illegalArgumentException.getLocalizedMessage()), illegalArgumentException); //TODO i18n
+			throw new IOException("Invalid YAML in `%s`: %s".formatted(name, illegalArgumentException.getLocalizedMessage()), illegalArgumentException); //TODO i18n
 		}
 	}
 
